testsuite/tests/tlks/should_fail/tlks_fail003.hs
{-# LANGUAGE TopLevelKindSignatures, NamedWildCards #-}

module TLKS_Fail003 where

type T :: _w
data T = MkT
